--- a/main.html
+++ b/main.html
@@ -8,6 +8,20 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Burla</h1><br>
+	<p>Burla is a beautiful place, full of parks and bright colours. I went there to meet my friends, not expecting much but I was amazed at how clean the city was.</p>
+	<ol>
+		<li><b>Burla Main Park</b></li>
+		<li><b>The Jagannath Temple</b></li>
+		<li><b>VSSUT College Auditorium, Really huge</b></li>
+		<li><b>Mount Crystal</b></li>
+		<li><b>Hotel SilverMoon</b></li>
+	</ol>
+	<ul>
+		<li><i>Biryani</i></li>
+		<li><i>Momos</i></li>
+		<li><i>Beer</i></li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
