--- a/main.html
+++ b/main.html
@@ -9,19 +9,23 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<h1>Burla</h1><br>
-	<p>Burla is a beautiful place, full of parks and bright colours. I went there to meet my friends, not expecting much but I was amazed at how clean the city was.</p>
+	<p>Burla is a nice place, full of institutes and gardens and wonderful scenaries. It also has a beach.</p>
 	<ol>
-		<li><b>Burla Main Park</b></li>
-		<li><b>The Jagannath Temple</b></li>
-		<li><b>VSSUT College Auditorium, Really huge</b></li>
-		<li><b>Mount Crystal</b></li>
-		<li><b>Hotel SilverMoon</b></li>
+		<li><b>Beach</b></li>
+		<li><b>Chai Sutta Bar</b></li>
+		<li><b>VSSUT Auditorium</b></li>
+		<li><b>Aquarium</b></li>
+		<li><b>Amazing Cafe</b></li>
 	</ol>
+
 	<ul>
 		<li><i>Biryani</i></li>
+		<li><i>Vodka Chai</i></li>
 		<li><i>Momos</i></li>
-		<li><i>Beer</i></li>
+		<li><i>Paneer Tikka</i></li>
+		<li><i>Manchurian</i></li>
 	</ul>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
